--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 
 <div class="search-form">
     <!-- default value, type, and what to look for -->
-    <input #searchTerm type = "text" (keyup.enter) = search(searchTerm.value)/>
+    Search: <input #searchTerm type = "text" (keyup.enter) = search(searchTerm.value)/>
     <button (click) = "search(searchTerm.value)">Search</button>
 </div>
