--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -6,7 +6,9 @@
 .warning {
     background-color: #da8a8a;
 }
-
+.zebra {
+    background-color: gold;
+}
 table {
   color: #111;
   border-radius: 5px;
